--- a/style.css
+++ b/style.css
@@ -177,3 +177,16 @@ body {
     background-clip: text;
     color: transparent;
 }
+
+/* FAQ Answer Styles */
+.faq-answer {
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease, opacity 0.5s ease;
+}
+
+.faq-answer.open {
+    max-height: 500px; /* مقدار max-height را بر اساس طول محتوا تنظیم کنید */
+    opacity: 1;
+}
